k8s/flink-app/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: flink-app
  name: flink-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flink-app
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: flink-app
    spec:
      containers:
      - image: flink:1.20
        name: flink
        resources: {}
status: {}
