k8s/flink-app/templates/pvc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flink-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flink-app
  template:
    metadata:
      labels:
        app: flink-app
    spec:
      containers:
      - name: flink-app
        image: flink-app
        volumeMounts:
        - name: wwwroot
          mountPath: /root/flink/checkpoint
        ports:
        - containerPort: 80
      volumes:
      - name: wwwroot
        persistentVolumeClaim:
          claimName: my-pvc
