k8s/flink-app/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: flink-app
  name: flink-app
spec:
  ports:
  - port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: flink-app
  type: NodePort
status:
  loadBalancer: {}
