k8s/flink-app/templates/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flink-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: flink-app
  rules:
  - host: "k8s-003"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flink-app
            port:
              number: 8081
